# kernia

./: .gitignore  .gitignore.tmp  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  mkdocs.yml  pyproject.toml  vercel.json
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  security.yml
apps/docs/: .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml  source.config.ts  tsconfig.json
apps/docs/app/: global.css  globals.css  layout.tsx  page.tsx
apps/docs/app/(home)/: layout.tsx  page.tsx
apps/docs/app/blog/: layout.tsx  page.tsx
apps/docs/app/blog/[slug]/: page.tsx
apps/docs/app/docs/: layout.tsx  provider.tsx
apps/docs/app/docs/[[...slug]]/: page.client.tsx  page.tsx
apps/docs/app/llms-full.txt/: route.ts
apps/docs/components/: command-menu.tsx  markdown.tsx  mdx.tsx  providers.tsx  search-dialog.tsx  sidebar-content.tsx  theme-toggle.tsx  version-switcher.tsx
apps/docs/components/docs/: api-method.tsx  custom-sidebar.tsx  database-table.tsx  docs-sidebar.tsx  features.tsx  icons.tsx  mdx-components.tsx  mdx-widgets.tsx  provider-icons.tsx  steps.tsx
apps/docs/components/icons/: index.tsx  logo.tsx
apps/docs/components/landing/: footer.tsx  framework-sections.tsx  halftone-bg.tsx  hero-readme.tsx  hero-title.tsx  logo-context-menu.tsx  signature-mark.tsx  staggered-nav-files.tsx  trusted-by.tsx
apps/docs/components/ui/: accordion.tsx  alert.tsx  badge.tsx  button.tsx  callout.tsx  card.tsx  code-block.tsx  command.tsx  tabs.tsx  tooltip.tsx
apps/docs/content/blog/: better-auth-for-python.mdx  hello-kernia.mdx
apps/docs/content/docs/: basic-usage.mdx  comparison.mdx  index.mdx  installation.mdx  introduction.mdx  meta.json  quick-start.mdx
apps/docs/content/docs/adapters/: community-adapters.mdx  memory.mdx  meta.json  mongo.mdx  mssql.mdx  mysql.mdx  other-relational-databases.mdx  postgresql.mdx  redis-storage.mdx  sqlalchemy.mdx  sqlite.mdx
apps/docs/content/docs/authentication/: apple.mdx  discord.mdx  email-password.mdx  facebook.mdx  github.mdx  gitlab.mdx  google.mdx  linkedin.mdx  meta.json  microsoft.mdx  other-social-providers.mdx  slack.mdx  spotify.mdx  twitter.mdx
apps/docs/content/docs/concepts/: admin-config.mdx  api.mdx  architecture.mdx  billing.mdx  cli.mdx  client.mdx  cookies.mdx  database.mdx  email.mdx  events.mdx  hooks.mdx  meta.json  oauth.mdx  plugins.mdx  rate-limit.mdx  security.mdx  session-management.mdx  sessions.mdx  users-accounts.mdx
apps/docs/content/docs/examples/: deployment.mdx  fastapi-saas-demo.mdx  meta.json  next-js.mdx  react-router.mdx  svelte-kit.mdx  vite-client.mdx
apps/docs/content/docs/guides/: auth0-migration-guide.mdx  browser-extension-guide.mdx  clerk-migration-guide.mdx  create-a-db-adapter.mdx  dynamic-base-url.mdx  meta.json  next-auth-migration-guide.mdx  optimizing-for-performance.mdx  saml-sso-with-okta.mdx  supabase-migration-guide.mdx  testing-passkeys.mdx  workos-migration-guide.mdx  your-first-plugin.mdx
apps/docs/lib/: blog.ts  metadata.ts  shared.tsx  source.ts
apps/docs/scripts/: check-docs-quality.mjs
docs/: admin-config.md  billing.md  demo.md  deployment.md  email-clients.md  getting-started.md  index.md  mkdocs.yml  openapi.md  testing.md
docs/_includes/: _plugin_template.md
docs/plugins/: access.md  adapters.md  additional_fields.md  admin.md  admin_config.md  anonymous.md  api_key.md  bearer.md  captcha.md  custom_session.md  device_authorization.md  email_otp.md  email_password.md  generic_oauth.md  haveibeenpwned.md  index.md  jwt.md  last_login_method.md  magic_link.md  mcp.md  multi_session.md  oauth_provider.md  oauth_proxy.md  oidc_provider.md  one_tap.md  one_time_token.md  open_api.md  organization.md  passkey.md  phone_number.md  redis_storage.md  scim.md  siwe.md  sso.md  stripe.md  two_factor.md  username.md
docs/scripts/: build_plugin_pages.py
e2e/adapter/: test_adapter_contract.py
e2e/integration/: test_core_routes.py  test_django.py  test_email_password_flow.py  test_email_password_flow_sqlalchemy.py  test_fastapi.py  test_passkey_softauth.py  test_saml_strict_c14n.py  test_starlette.py  test_stripe_seat_sync.py
e2e/plugins/: test_admin.py  test_admin_config.py  test_anonymous.py  test_api_key.py  test_bearer.py  test_captcha.py  test_custom_session.py  test_device_authorization.py  test_email_otp.py  test_generic_oauth.py  test_haveibeenpwned.py  test_i18n.py  test_jwt.py  test_last_login_method.py  test_magic_link.py  test_mcp.py  test_multi_session.py  test_oauth_proxy.py  test_one_tap.py  test_one_time_token.py  test_open_api.py  test_org_api_key.py  test_organization.py  test_phone_number.py  test_rate_limit.py  test_siwe.py  test_siwe_ens.py  test_social_providers.py  test_sso.py  test_sso_provider_endpoints.py  test_stripe.py  test_stripe_checkout.py  test_stripe_checkout_params.py  test_stripe_customer.py  test_stripe_organization_customer.py  test_stripe_organization_lifecycle.py  test_stripe_organization_webhook.py  test_stripe_schedule.py  test_stripe_seat_swap.py  test_stripe_seats.py  (+4 more)
e2e/smoke/: test_oauth2.py
examples/: README.md
examples/backend/: app.py  run.sh
examples/frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  requirements.txt  tsconfig.json  vercel.json  vite.config.ts
examples/frontend/api/: index.py
examples/frontend/api/_wheels/: kernia-0.0.0-py3-none-any.whl  kernia_api_key-0.0.0-py3-none-any.whl  kernia_fastapi-0.0.0-py3-none-any.whl  kernia_memory_adapter-0.0.0-py3-none-any.whl  kernia_sqlalchemy-0.0.0-py3-none-any.whl  kernia_stripe-0.0.0-py3-none-any.whl  kernia_test_utils-0.0.0-py3-none-any.whl
examples/frontend/scripts/: wire-check.mjs
examples/frontend/src/: App.tsx  auth-client.ts  index.css
scripts/: apply_pypi_metadata.py  audit_layout.py  bump_version.py  scaffold_new_packages.sh  scaffold_packages.sh
spec/: adapter-contract.md  conformance-matrix.md  cookie-session-model.md  endpoint-contract.md  file-mapping.md  plugin-contract.md  wire-protocol.md
(+83 files in other folders)
