[project]
name = "better-auth-python-workspace"
version = "0.0.0"
description = "Better-auth port to Python — workspace root"
requires-python = ">=3.11"

[tool.uv]
dev-dependencies = [
    "anyio>=4.13.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.27",
    "fastapi>=0.115",
    "starlette>=0.37",
    "django>=4.2",
    "asgiref>=3.8",
    "authlib>=1.3",
    "cryptography>=42",
    "pydantic>=2.10",
    "better-auth",
    "better-auth-memory-adapter",
    "better-auth-sqlalchemy",
    "better-auth-mongo",
    "better-auth-redis-storage",
    "better-auth-api-key",
    "better-auth-sso",
    "better-auth-scim",
    "better-auth-stripe",
    "better-auth-cli",
    "better-auth-fastapi",
    "better-auth-starlette",
    "better-auth-django",
    "better-auth-test-utils",
    "better-auth-oauth-provider",
    "better-auth-mcp",
    "better-auth-passkey",
    "pyotp>=2.9",
    "eth-account>=0.11",
    "webauthn>=2.7",
    "aiosqlite>=0.20",
    "greenlet>=3.0",
    "openapi-spec-validator>=0.7",
    "argon2-cffi>=23.1",
    "alembic>=1.13",
    "click>=8.1",
    "mkdocs-material>=9.5",
]

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/memory_adapter",
    "packages/sqlalchemy_adapter",
    "packages/mongo_adapter",
    "packages/redis_storage",
    "packages/api_key",
    "packages/passkey",
    "packages/sso",
    "packages/oauth_provider",
    "packages/mcp",
    "packages/scim",
    "packages/stripe",
    "packages/fastapi_integration",
    "packages/starlette_integration",
    "packages/django_integration",
    "packages/cli",
    "packages/test_utils",
]
exclude = ["reference"]

[tool.uv.sources]
better-auth = { workspace = true }
better-auth-memory-adapter = { workspace = true }
better-auth-sqlalchemy = { workspace = true }
better-auth-mongo = { workspace = true }
better-auth-redis-storage = { workspace = true }
better-auth-api-key = { workspace = true }
better-auth-passkey = { workspace = true }
better-auth-sso = { workspace = true }
better-auth-oauth-provider = { workspace = true }
better-auth-mcp = { workspace = true }
better-auth-scim = { workspace = true }
better-auth-stripe = { workspace = true }
better-auth-fastapi = { workspace = true }
better-auth-starlette = { workspace = true }
better-auth-django = { workspace = true }
better-auth-cli = { workspace = true }
better-auth-test-utils = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio>=4.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "httpx>=0.27",
    "cryptography>=42",
    "authlib>=1.3",
    "openapi-spec-validator>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["reference"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "PT", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["reference/"]
mypy_path = "packages/core/src:packages/memory_adapter/src:packages/sqlalchemy_adapter/src:packages/mongodb_adapter/src:packages/redis_storage/src:packages/api_key/src:packages/passkey/src:packages/sso/src:packages/oauth_provider/src:packages/scim/src:packages/stripe/src:packages/fastapi_integration/src:packages/starlette_integration/src:packages/django_integration/src:packages/cli/src:packages/test_utils/src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["e2e", "packages"]
filterwarnings = ["ignore::DeprecationWarning"]
# Each package's tests/ directory is collected as an isolated rootless tree.
# Avoids "import file mismatch" collisions on shared filenames across packages.
addopts = "--import-mode=importlib"
