[project]
name = "kernia-workspace"
version = "0.0.0"
description = "Kernia workspace root"
requires-python = ">=3.11"

[tool.uv]
dev-dependencies = [
    "anyio>=4.13.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "starlette>=0.37",
    "django>=4.2",
    "asgiref>=3.8",
    "authlib>=1.3",
    "cryptography>=42",
    "pydantic>=2.10",
    "argon2-cffi>=23",
    "kernia",
    "kernia-api-key",
    "kernia-cli",
    "kernia-memory-adapter",
    "kernia-sqlalchemy",
    "kernia-mongo",
    "kernia-redis-storage",
    "kernia-fastapi",
    "kernia-starlette",
    "kernia-django",
    "kernia-test-utils",
    "kernia-oauth-provider",
    "kernia-passkey",
    "kernia-sso",
    "kernia-scim",
    "kernia-stripe",
    "pyotp>=2.9",
    "eth-account>=0.11",
    "webauthn>=2.7",
    "click>=8.1",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "greenlet>=3.0",
    "alembic>=1.13",
    "motor>=3",
    "redis>=5",
    "stripe>=10",
    "python3-saml>=1.16",
    "cbor2>=5",
    "lxml>=5",
    "openapi-spec-validator>=0.7",
]

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/memory_adapter",
    "packages/sqlalchemy_adapter",
    "packages/mongo_adapter",
    "packages/redis_storage",
    "packages/api_key",
    "packages/passkey",
    "packages/sso",
    "packages/oauth_provider",
    "packages/mcp",
    "packages/scim",
    "packages/stripe",
    "packages/fastapi_integration",
    "packages/starlette_integration",
    "packages/django_integration",
    "packages/cli",
    "packages/test_utils",
]

[tool.uv.sources]
kernia = { workspace = true }
kernia-memory-adapter = { workspace = true }
kernia-sqlalchemy = { workspace = true }
kernia-mongo = { workspace = true }
kernia-redis-storage = { workspace = true }
kernia-api-key = { workspace = true }
kernia-passkey = { workspace = true }
kernia-sso = { workspace = true }
kernia-oauth-provider = { workspace = true }
kernia-scim = { workspace = true }
kernia-stripe = { workspace = true }
kernia-fastapi = { workspace = true }
kernia-starlette = { workspace = true }
kernia-django = { workspace = true }
kernia-cli = { workspace = true }
kernia-test-utils = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio>=4.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "httpx>=0.27",
    "cryptography>=42",
    "authlib>=1.3",
    "openapi-spec-validator>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "PT", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# pytest stylistic conventions (assertion granularity, raises specificity,
# parametrize tuple form, fixture naming) are not enforced in this codebase.
"**/tests/**" = ["PT"]
"e2e/**" = ["PT"]
"packages/test_utils/**" = ["PT"]
# FastAPI's `Depends()`/`Body()` defaults are the documented idiom, not a B008 bug.
"examples/**" = ["B008"]
"e2e/integration/test_fastapi.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "packages/core/src:packages/memory_adapter/src:packages/sqlalchemy_adapter/src:packages/mongo_adapter/src:packages/redis_storage/src:packages/api_key/src:packages/passkey/src:packages/sso/src:packages/oauth_provider/src:packages/scim/src:packages/stripe/src:packages/fastapi_integration/src:packages/starlette_integration/src:packages/django_integration/src:packages/cli/src:packages/test_utils/src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["e2e", "packages"]
filterwarnings = ["ignore::DeprecationWarning"]
# Each package's tests/ directory is collected as an isolated rootless tree.
# Avoids "import file mismatch" collisions on shared filenames across packages.
addopts = "--import-mode=importlib"
