[project]
name = "kernia-workspace"
version = "0.0.0"
description = "Kernia workspace root"
requires-python = ">=3.11"

[tool.uv]
dev-dependencies = [
    "anyio>=4.13.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "starlette>=0.37",
    "django>=4.2",
    "asgiref>=3.8",
    "authlib>=1.3",
    "cryptography>=42",
    "pydantic>=2.10",
    "argon2-cffi>=23",
    "kernia",
    "kernia-cli",
    "kernia-test-utils",
    "fastmcp>=2.3",
    "pyotp>=2.9",
    "eth-account>=0.11",
    "webauthn>=2.7",
    "click>=8.1",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "greenlet>=3.0",
    "alembic>=1.13",
    "motor>=3",
    "redis>=5",
    "stripe>=10",
    "python3-saml>=1.16",
    "cbor2>=5",
    "lxml>=5",
    "openapi-spec-validator>=0.7",
]

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/cli",
    "packages/test_utils",
]

[tool.uv.sources]
kernia = { workspace = true }
kernia-cli = { workspace = true }
kernia-test-utils = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio>=4.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "httpx>=0.27",
    "cryptography>=42",
    "authlib>=1.3",
    "openapi-spec-validator>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "PT", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# pytest stylistic conventions (assertion granularity, raises specificity,
# parametrize tuple form, fixture naming) are not enforced in this codebase.
"**/tests/**" = ["PT"]
"e2e/**" = ["PT"]
"packages/test_utils/**" = ["PT"]
# FastAPI's `Depends()`/`Body()` defaults are the documented idiom, not a B008 bug.
"examples/**" = ["B008"]
"e2e/integration/test_fastapi.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "packages/core/src:packages/cli/src:packages/test_utils/src"

# The `kernia` package itself is fully strict. The optional extra modules that
# now ship inside the same wheel (kernia_passkey, kernia_sso, kernia_stripe,
# kernia_scim, kernia_django, ...) integrate untyped third-party libraries
# (django, lxml, python3-saml/onelogin, motor) that lack py.typed markers, so a
# blanket strict sweep over them is not enforced here. Their behavior is covered
# by the test suite; this preserves the type-gate scope from before these trees
# were relocated into packages/core/src.
[[tool.mypy.overrides]]
module = [
    "kernia_api_key.*",
    "kernia_passkey.*",
    "kernia_sso.*",
    "kernia_oauth_provider.*",
    "kernia_scim.*",
    "kernia_stripe.*",
    "kernia_mcp.*",
    "kernia_sqlalchemy.*",
    "kernia_mongo.*",
    "kernia_redis_storage.*",
    "kernia_fastapi.*",
    "kernia_starlette.*",
    "kernia_django.*",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["e2e", "packages"]
filterwarnings = ["ignore::DeprecationWarning"]
# Each package's tests/ directory is collected as an isolated rootless tree.
# Avoids "import file mismatch" collisions on shared filenames across packages.
addopts = "--import-mode=importlib"
